# dioxus-three

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  changelog.md  index.html
docs/api/: README.md  modelformat.md  shaderconfig.md  shaderpreset.md  threeview.md
docs/guides/: architecture.md  camera.md  contributing.md  custom-shaders.md  formats.md  installation.md  models.md  pointer-selection.md  quickstart.md  scene-properties.md  shaders.md  transform.md
examples/: README.md
examples/demo/: Cargo.toml
examples/demo/src/: main.rs
examples/mobile-demo/: Cargo.toml  Dioxus.toml  README.md
examples/mobile-demo/src/: main.rs
examples/web-demo/: Cargo.toml  Dioxus.toml  README.md
examples/web-demo/src/: main.rs
scripts/: publish.sh
src/: desktop.rs  gizmos.rs  input.rs  lib.rs  selection.rs  web.rs
src/shaders/: gradient.frag  heatmap.frag  hologram.frag  hologram.vert  toon.frag  water.frag  water.vert
