[package]
name = "dioxus-three"
version = "0.0.1"
edition = "2021"
authors = ["Esteban Puello <eftech93@gmail.com>"]
description = "A Threejs component for Dioxus Desktop applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eftech93/dioxus-three"
keywords = ["dioxus", "threejs", "3d", "graphics", "component"]
categories = ["gui", "graphics", "rendering"]
rust-version = "1.76"

[dependencies]
dioxus = { version = "0.5", features = ["desktop"] }

[dev-dependencies]
dioxus-desktop = "0.5"
tracing-subscriber = "0.3"

[[example]]
name = "demo"
path = "examples/demo/src/main.rs"
