[package]
name = "dioxus-three-web-demo"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Puello <eftech93@gmail.com>"]
description = "Web demo for Dioxus Three - 3D model viewer"

[dependencies]
dioxus-three = { path = "../.." }
dioxus = { version = "0.6", features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "Window",
    "console",
    "HtmlHeadElement",
    "HtmlCollection",
] }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
